--- a/clicky/src/components/Card/Card.css
+++ b/clicky/src/components/Card/Card.css
@@ -1,11 +1,11 @@
 .card {
     background-color: yellow;
     border-radius: 2px;
-    height: 250px;
+    height: 200px;
     width: 325px;
     margin: 1rem;
     position: relative;
-    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    box-shadow: 0 3px 6px rgb(0, 0, 0), 0 3px 6px rgb(0, 0, 0);
     text-align: left;
 }
 
@@ -17,11 +17,5 @@
 }
 
 .card > .img-container > img {
-    width: 60%;
-}
-
-.card > .content {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: 15px;
+    width: 90%;
 }
